themes - Fix nav-list padding/margin overlap.

--- a/themes/v0/static/css/septr.css
+++ b/themes/v0/static/css/septr.css
@@ -34,3 +34,10 @@
     padding-top: 10px;
     font-weight: 800;
 }
+
+.nav-list > li > a {
+    padding-left: 4px;
+    padding-right: 4px;
+    margin-left: 0;
+    margin-right: 0;
+}
